--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -2,8 +2,10 @@
 layout: archive
 ---
 
-{{ content }}
+<!-- {{ content }} -->
 
+<!-- 이 코드는 site.categories변수로 모든 카테고리를 반복해서 categories_max변수에 카테고리중에서 가장 post가 많이 작성된 카테고리의 최대값이 저장됨-->
+<!-- 이 코드가 필요한 이유는 sort를 하기 위함. 제일 post가 많은 것부터 내림차순으로 차례대로 -->
 <!-- {% assign categories_max = 0 %}
 {% for category in site.categories %}
   {% if category[1].size > categories_max %}
