--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,6 +1,9 @@
 ---
 layout: default
-
+fruit:
+  - Nonogram_Peko
+  - PushPush
+  - TSTS
 ---
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
