--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -8,8 +8,12 @@ layout: archive
 <!-- 이 코드가 필요한 이유는 sort를 하기 위함. 제일 post가 많은 것부터 내림차순으로 차례대로 -->
 {% assign categories_max = 0 %}
 {% for category in site.categories %}
-  {% if category[1].size > categories_max %}
-    {% assign categories_max = category[1].size %}
+  {% if     category[0]  == "Nonogram_Peko" %}
+  {% elsif  category[0]  == "PushPush" %}
+  {% elsif  category[0]  == "TSTS" %}
+    {% if category[1].size > categories_max %}
+      {% assign categories_max = category[1].size %}
+    {% endif %}
   {% endif %}
 {% endfor %}
 
@@ -17,12 +21,16 @@ layout: archive
 <ul class="taxonomy__index">
   {% for i in (1..categories_max) reversed %}
     {% for category in site.categories %}
-      {% if category[1].size == i %}
-        <li>
-          <a href="#{{ category[0] | slugify }}">
-            <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
-          </a>
-        </li>
+      {% if     category[0]  == "Nonogram_Peko" %}
+      {% elsif  category[0]  == "PushPush" %}
+      {% elsif  category[0]  == "TSTS" %}
+        {% if category[1].size == i %}
+          <li>
+            <a href="#{{ category[0] | slugify }}">
+              <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
+            </a>
+          </li>
+        {% endif %}
       {% endif %}
     {% endfor %}
   {% endfor %}
@@ -31,16 +39,20 @@ layout: archive
 {% assign entries_layout = page.entries_layout | default: 'list' %}
 {% for i in (1..categories_max) reversed %}
   {% for category in site.categories %}
-    {% if category[1].size == i %}
-      <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
-        <h2 class="archive__subtitle">{{ category[0] }}</h2>
-        <div class="entries-{{ entries_layout }}">
-          {% for post in category.last %}
-            {% include archive-single.html type=entries_layout %}
-          {% endfor %}
-        </div>
-        <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
-      </section>
+    {% if     category[0]  == "Nonogram_Peko" %}
+    {% elsif  category[0]  == "PushPush" %}
+    {% elsif  category[0]  == "TSTS" %}
+      {% if category[1].size == i %}
+        <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
+          <h2 class="archive__subtitle">{{ category[0] }}</h2>
+          <div class="entries-{{ entries_layout }}">
+            {% for post in category.last %}
+              {% include archive-single.html type=entries_layout %}
+            {% endfor %}
+          </div>
+          <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
+        </section>
+      {% endif %}
     {% endif %}
   {% endfor %}
 {% endfor %}
