--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -8,22 +8,20 @@ layout: archive
 <!-- 이 코드가 필요한 이유는 sort를 하기 위함. 제일 post가 많은 것부터 내림차순으로 차례대로 -->
 {% assign categories_max = 0 %}
 {% for category in site.categories %}
-  {% if     category[0]  == "Nonogram_Peko" %}
-  {% elsif  category[0]  == "PushPush" %}
-  {% elsif  category[0]  == "TSTS" %}
+  {% unless category[0]  == "Nonogram_Peko" or category[0]  == "PushPush" or category[0]  == "TSTS"%}
+    {% continue %}
     {% if category[1].size > categories_max %}
       {% assign categories_max = category[1].size %}
     {% endif %}
-  {% endif %}
+  {% endunless %}
 {% endfor %}
 
 <!-- 카테고리 개별의 post의 개수를 표시해주는 부분 -->
 <ul class="taxonomy__index">
   {% for i in (1..categories_max) reversed %}
     {% for category in site.categories %}
-      {% if     category[0]  == "Nonogram_Peko" %}
-      {% elsif  category[0]  == "PushPush" %}
-      {% elsif  category[0]  == "TSTS" %}
+    {% unless category[0]  == "Nonogram_Peko" or category[0]  == "PushPush" or category[0]  == "TSTS"%}
+      {% continue %}
         {% if category[1].size == i %}
           <li>
             <a href="#{{ category[0] | slugify }}">
@@ -31,7 +29,7 @@ layout: archive
             </a>
           </li>
         {% endif %}
-      {% endif %}
+      {% endunless %}
     {% endfor %}
   {% endfor %}
 </ul>
@@ -39,9 +37,8 @@ layout: archive
 {% assign entries_layout = page.entries_layout | default: 'list' %}
 {% for i in (1..categories_max) reversed %}
   {% for category in site.categories %}
-    {% if     category[0]  == "Nonogram_Peko" %}
-    {% elsif  category[0]  == "PushPush" %}
-    {% elsif  category[0]  == "TSTS" %}
+    {% unless category[0]  == "Nonogram_Peko" or category[0]  == "PushPush" or category[0]  == "TSTS"%}
+      {% continue %}
       {% if category[1].size == i %}
         <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
           <h2 class="archive__subtitle">{{ category[0] }}</h2>
@@ -53,6 +50,6 @@ layout: archive
           <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
         </section>
       {% endif %}
-    {% endif %}
+    {% endunless %}
   {% endfor %}
 {% endfor %}
