--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -35,18 +35,20 @@ layout: archive
 {% assign entries_layout = page.entries_layout | default: 'list' %}
 {% for i in (1..categories_max) reversed %}
   {% for category in site.categories %}
-    {% if category[0]  == "Nonogram_Peko" or category[0]  == "PushPush" or category[0]  == "TSTS"%}
-      {% if category[1].size == i %}
-        <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
-          <h2 class="archive__subtitle">{{ category[0] }}</h2>
-          <div class="entries-{{ entries_layout }}">
-            {% for post in category.last %}
-              {% include archive-single.html type=entries_layout %}
-            {% endfor %}
-          </div>
-          <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
-        </section>
+    {% for item in page.projects %}
+      {% if category[0] == item %}
+        {% if category[1].size == i %}
+          <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
+            <h2 class="archive__subtitle">{{ category[0] }}</h2>
+            <div class="entries-{{ entries_layout }}">
+              {% for post in category.last %}
+                {% include archive-single.html type=entries_layout %}
+              {% endfor %}
+            </div>
+            <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
+          </section>
+        {% endif %}
       {% endif %}
-    {% endif %}
+    {% endfor %}
   {% endfor %}
 {% endfor %}
