--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -23,7 +23,8 @@ layout: archive
         {% if category[1].size == i %}
           <li>
             <a href="#{{ category[0] | slugify }}">
-              <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
+              <!-- <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span> -->
+              <strong>{{ page.projects[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
             </a>
           </li>
         {% endif %}
