--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -28,7 +28,7 @@ projects:
           <li>
             <a href="#{{ category[0] | slugify }}">
               <!-- <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span> -->
-              <strong>{{ page.projects[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
+              <strong>{{ page.projects[0] }}</strong> <span class="taxonomy__count">{{ 2 }}</span>
             </a>
           </li>
         {% endif %}
