--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -41,7 +41,7 @@ projects:
 {% for i in (1..categories_max) reversed %}
   {% for category in site.categories %}
     {% for item in page.projects %}
-      {% if category[0] == item.name %}
+      {% if category[0] == item[1] %}
         {% if category[1].size == i %}
           <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
             <h2 class="archive__subtitle">{{ category[0] }}</h2>
