--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -4,7 +4,7 @@ layout: archive
 
 {{ content }}
 
-{% assign projectArray = "Nonogram_Peko,PushPush,TSTS" | split: ',' %}
+{% assign projectArray = "Nonogram_Peko,PushPush,TSTS" | split: ',' %}  <!-- 지금은 여기하고 categories.html 에 따로 배열을 뒀지만 나중에는 이 방법 말고 projects폴더를 읽어 오는 방식으로 바꿔보자.-->
 <!-- 이 코드는 site.categories변수로 모든 카테고리를 반복해서 categories_max변수에 카테고리중에서 가장 post가 많이 작성된 카테고리의 최대값이 저장됨-->
 <!-- 이 코드가 필요한 이유는 sort를 하기 위함. 제일 post가 많은 것부터 내림차순으로 차례대로 -->
 {% assign categories_max = 0 %}
@@ -25,7 +25,7 @@ layout: archive
           <li>
             <a href="#{{ category[0] | slugify }}">
               <!-- <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span> -->
-              <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ 6 }}</span>
+              <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
             </a>
           </li>
         {% endif %}
