--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -4,22 +4,35 @@ layout: archive
 
 {{ content }}
 
+{% assign projectArray = "Nonogram_Peko,PushPush,TSTS" | split: ',' %}  <!-- 지금은 여기하고 categories.html 에 따로 배열을 뒀지만 나중에는 이 방법 말고 projects폴더를 읽어 오는 방식으로 바꿔보자.-->
+<!-- 이 코드는 site.categories변수로 모든 카테고리를 반복해서 categories_max변수에 카테고리중에서 가장 post가 많이 작성된 카테고리의 최대값이 저장됨-->
+<!-- 이 코드가 필요한 이유는 sort를 하기 위함. 제일 post가 많은 것부터 내림차순으로 차례대로 -->
 {% assign categories_max = 0 %}
 {% for category in site.categories %}
-  {% if category[1].size > categories_max %}
-    {% assign categories_max = category[1].size %}
+  {% if category[0]  == "Nonogram_Peko" or category[0]  == "PushPush" or category[0]  == "TSTS"%}
+    {%continue%}
+  {% else %}
+    {% if category[1].size > categories_max %}
+      {% assign categories_max = category[1].size %}
+    {% endif %}
   {% endif %}
 {% endfor %}
 
+<!-- 카테고리 개별의 post의 개수를 표시해주는 부분 -->
 <ul class="taxonomy__index">
   {% for i in (1..categories_max) reversed %}
     {% for category in site.categories %}
-      {% if category[1].size == i %}
-        <li>
-          <a href="#{{ category[0] | slugify }}">
-            <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
-          </a>
-        </li>
+    {% if category[0]  == "Nonogram_Peko" or category[0]  == "PushPush" or category[0]  == "TSTS"%}
+      {%continue%}
+    {% else %}
+        {% if category[1].size == i %}
+          <li>
+            <a href="#{{ category[0] | slugify }}">
+              <!-- <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span> -->
+              <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
+            </a>
+          </li>
+        {% endif %}
       {% endif %}
     {% endfor %}
   {% endfor %}
@@ -28,16 +41,22 @@ layout: archive
 {% assign entries_layout = page.entries_layout | default: 'list' %}
 {% for i in (1..categories_max) reversed %}
   {% for category in site.categories %}
-    {% if category[1].size == i %}
-      <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
-        <h2 class="archive__subtitle">{{ category[0] }}</h2>
-        <div class="entries-{{ entries_layout }}">
-          {% for post in category.last %}
-            {% include archive-single.html type=entries_layout %}
-          {% endfor %}
-        </div>
-        <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
-      </section>
-    {% endif %}
+    {% for item in projectArray %}
+      {% if category[0] == item %}
+        {%continue%}
+      {% else %}
+        {% if category[1].size == i %}
+          <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
+            <h2 class="archive__subtitle">{{ category[0] }}</h2>
+            <div class="entries-{{ entries_layout }}">
+              {% for post in category.last %}
+                {% include archive-single.html type=entries_layout %}
+              {% endfor %}
+            </div>
+            <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
+          </section>
+        {% endif %}
+      {% endif %}
+    {% endfor %}
   {% endfor %}
 {% endfor %}
