--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -42,9 +42,7 @@ layout: archive
 {% for i in (1..categories_max) reversed %}
   {% for category in site.categories %}
     {% for item in projectArray %}
-      {% if category[0] == item %}
-        {%continue%}
-      {% else %}
+      {% if category[0] != item %}
         {% if category[1].size == i %}
           <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
             <h2 class="archive__subtitle">{{ category[0] }}</h2>
@@ -56,6 +54,7 @@ layout: archive
             <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
           </section>
         {% endif %}
+        {% break %}
       {% endif %}
     {% endfor %}
   {% endfor %}
