--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -29,7 +29,7 @@ layout: archive
           <li>
             <a href="#{{ category[0] | slugify }}">
               <!-- <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span> -->
-              <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
+              <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ 88 }}</span>
             </a>
           </li>
         {% endif %}
@@ -43,18 +43,19 @@ layout: archive
   {% for category in site.categories %}
     {% for item in projectArray %}
       {% if category[0] == item %}
+        {% if category[1].size == i %}
+        <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
+          <h2 class="archive__subtitle">{{ category[0] }}</h2>
+          <div class="entries-{{ entries_layout }}">
+            {% for post in category.last %}
+              {% include archive-single.html type=entries_layout %}
+            {% endfor %}
+          </div>
+          <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
+        </section>
         {% break %}
       {% else %}
-        {% if category[1].size == i %}
-          <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
-            <h2 class="archive__subtitle">{{ category[0] }}</h2>
-            <div class="entries-{{ entries_layout }}">
-              {% for post in category.last %}
-                {% include archive-single.html type=entries_layout %}
-              {% endfor %}
-            </div>
-            <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
-          </section>
+        
         {% break %}
         {% endif %}
       {% endif %}
