--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -43,6 +43,7 @@ layout: archive
   {% for category in site.categories %}
     {% for item in projectArray %}
       {% if category[0] == item %}
+        #proee
         {% break %}
       {% endif %}
       {% if category[1].size == i %}
