--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -29,7 +29,7 @@ layout: archive
           <li>
             <a href="#{{ category[0] | slugify }}">
               <!-- <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span> -->
-              <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ 77 }}</span>
+              <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
             </a>
           </li>
         {% endif %}
