--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -4,7 +4,10 @@ layout: archive
 
 {{ content }}
 
+
+
 {% assign projectArray = "Nonogram_Peko,PushPush,TSTS" | split: ',' %}  <!-- 지금은 여기하고 categories.html 에 따로 배열을 뒀지만 나중에는 이 방법 말고 projects폴더를 읽어 오는 방식으로 바꿔보자.-->
+
 <!-- 이 코드는 site.categories변수로 모든 카테고리를 반복해서 categories_max변수에 카테고리중에서 가장 post가 많이 작성된 카테고리의 최대값이 저장됨-->
 <!-- 이 코드가 필요한 이유는 sort를 하기 위함. 제일 post가 많은 것부터 내림차순으로 차례대로 -->
 {% assign categories_max = 0 %}
@@ -41,7 +44,7 @@ layout: archive
 {% assign entries_layout = page.entries_layout | default: 'list' %}
 {% for i in (1..categories_max) reversed %}
   {% for category in site.categories %}
-    {% if category[0]  == "Nonogram_Peko" or category[0]  == "PushPush" or category[0]  == "TSTS"%}
+    {% if category[0]  == nonostring or category[0]  == "PushPush" or category[0]  == "TSTS"%}
       {%continue%}
     {% else %}
       {% if category[1].size == i %}
