--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,8 +1,8 @@
-<!-- {% if post.header.teaser %}
-  {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
+{% if post.header.teaser %}
+  {% capture teaser %}ilo you{% endcapture %}
 {% else %}
   {% assign teaser = site.teaser %}
-{% endif %} -->
+{% endif %}
 
 {% if post.id %}
   {% assign title = post.title | markdownify | remove: "<p>" | remove: "</p>" %}
