--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -47,9 +47,9 @@ layout: archive
           <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
             <h2 class="archive__subtitle">{{ category[0] }}</h2>
             <div class="entries-{{ entries_layout }}">
-              {% for post in category.last %}
+              <!-- {% for post in category.last %}
                 {% include archive-single.html type=entries_layout %}
-              {% endfor %}
+              {% endfor %} -->
             </div>
             <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
           </section>
