--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -38,5 +38,5 @@ html {
 .language-plaintext {
   font-family: $monospace;
   font-size: $type-size-5;
-  background: #c0ffee;
+  background: #373C3F;
 }
