--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@ $monospace: 'Ubuntu Mono';
 $type-size-4-5: 1.12em !default; // Ubuntu Mono is a bit small
 
 @charset "utf-8";
-@import "minimal-mistakes/skins/aqua"; // skin
+@import "minimal-mistakes/skins/dark"; // skin
 @import "minimal-mistakes";
 
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans+KR|Ubuntu+Mono);
@@ -38,5 +38,5 @@ html {
 .language-plaintext {
   font-family: $monospace;
   font-size: $type-size-5;
-  background: #373C3F;
+  background: #c0ffee;
 }
