--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<!-- {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
+{% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
 {% elsif page.header.video.id and page.header.video.provider %}
   {% include page__hero_video.html %}
@@ -12,9 +12,9 @@ layout: default
   {% unless paginator %}
     {% include breadcrumbs.html %}
   {% endunless %}
-{% endif %} -->
+{% endif %}
 
-<div id="main" role="main">
+<!-- <div id="main" role="main">
   {% include sidebar.html %}
 
   <article class="page" itemscope itemtype="https://schema.org/CreativeWork">
@@ -86,4 +86,4 @@ layout: default
       </div>
     </div>
   {% endif %}
-</div>
+</div> -->
