--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -25,16 +25,17 @@ layout: default
     {% if page.last_modified_at %}<meta itemprop="dateModified" content="{{ page.last_modified_at | date_to_xmlschema }}">{% endif %}
 
     <div class="page__inner-wrap">
-      {% unless page.header.overlay_color or page.header.overlay_image %}
+      <!-- {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
           {% include page__meta.html %}
         </header>
-      {% endunless %}
+      {% endunless %} -->
 
       <section class="page__content" itemprop="text">
         {% if page.toc %}
-          <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">  <!-- 이 부분은 toc을 옆으로 빼서-->
+          <!-- <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">   -->
+            <!-- 이 부분은 toc을 옆으로 빼서 화면을 따라 스크롤링 해줌. 만약 주석처리나 삭제하면 post content 쪽으로 들어옴-->
 
             <nav class="toc"> <!-- toc은 메인 글 옆에 제목1, 제목2 이런식으로 바로바로 목차를 보여주고 이동 하게 해주는 부분-->
               <header><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'file-alt' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "On this page" }}</h4></header>
