--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -30,7 +30,8 @@ layout: default
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
-          <!-- {% include page__meta.html %} -->
+          {% include page__date.html %}
+          <!-- {% include page__meta.html %} --> <!-- less than 1 minute read << 이렇게 나오는 거 -->
         </header>
       {% endunless %}
 
@@ -54,7 +55,7 @@ layout: default
           <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
         {% endif %}
         {% include page__taxonomy.html %}
-        {% include page__date.html %}
+        
       </footer>
 
       {% if page.share %}{% include social-share.html %}{% endif %}
