--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -37,7 +37,7 @@ layout: default
 
       <section class="page__content" itemprop="text">
         {% if page.toc %}
-          <!-- <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">   -->
+          <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">  
             <!-- 이 부분은 toc을 옆으로 빼서 화면을 따라 스크롤링 해줌. 만약 주석처리나 삭제하면 post content 쪽으로 들어옴-->
 
             <nav class="toc"> <!-- toc은 메인 글 옆에 제목1, 제목2 이런식으로 바로바로 목차를 보여주고 이동 하게 해주는 부분-->
