--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -44,5 +44,7 @@ html {
 .language-plaintext {
   font-family: $monospace;
   font-size: $type-size-5;
-  background: #4D5357;
+  background: #ff0000;
 }
+
+// background: #4D5357;
