--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -44,7 +44,8 @@ html {
 .language-plaintext {
   font-family: $monospace;
   font-size: $type-size-5;
-  background: #ff0000;
+  background: #4D5357;
+  $text-color: #FFBF00;
 }
 
 // background: #4D5357;
