--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -47,7 +47,7 @@ classes: wide
 
       <section class="page__content" itemprop="text">
         {% if page.toc %}
-          <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">
+          <!-- <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}"> -->
             <nav class="toc">
               <header><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'align-left' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "Index" }}</h4></header>
               {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="toc__menu" %}
