--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     {% include_cached masthead.html %}
 
     <div class="initial-content">
-  
+      {{ content }}
     </div>
 
     {% if site.search == true %}
