--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,34 +19,34 @@ $type-size-4-5: 1.12em !default; // Ubuntu Mono is a bit small
 
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans+KR|Ubuntu+Mono);
 
-// https://github.com/mmistakes/minimal-mistakes/issues/1219
-// html {
-//   font-size: 12px; // change to whatever
+https://github.com/mmistakes/minimal-mistakes/issues/1219
+html {
+  font-size: 12px; // change to whatever
   
-//   @include breakpoint($medium) {
-//     font-size: 14px; // change to whatever
-//   }
+  @include breakpoint($medium) {
+    font-size: 14px; // change to whatever
+  }
 
-//   @include breakpoint($large) {
-//     font-size: 16px; // change to whatever
-//   }
+  @include breakpoint($large) {
+    font-size: 16px; // change to whatever
+  }
 
-//   @include breakpoint($x-large) {
-//     font-size: 18px; // change to whatever
-//   }
-// }
+  @include breakpoint($x-large) {
+    font-size: 18px; // change to whatever
+  }
+}
 
-// .highlight {
-//   font-family: $monospace;
-//   font-size: $type-size-4-5;
-// }
+.highlight {
+  font-family: $monospace;
+  font-size: $type-size-4-5;
+}
 
-// .language-plaintext {
-//   font-family: $monospace;
-//   // color: mix(#FFBF00,$primary-color, 40%);
-//   color: #FFBF00; //한줄 코드 text색
-//   font-size: $type-size-5;
-//   background: #4D5357;  //한줄 코드 background색
-// }
+.language-plaintext {
+  font-family: $monospace;
+  // color: mix(#FFBF00,$primary-color, 40%);
+  color: #FFBF00; //한줄 코드 text색
+  font-size: $type-size-5;
+  background: #4D5357;  //한줄 코드 background색
+}
 
 // background: #4D5357;
