--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -145,7 +145,7 @@ $small: 600px !default;
 $medium: 768px !default;
 $medium-wide: 900px !default;
 $large: 1024px !default;
-$x-large: 1400px !default;
+$x-large: 1400px !default; //PC에서 보여지는 크기는 이 부분으로 조정 됨
 $max-width: $x-large !default;
 
 /*
