--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,7 +19,7 @@ $type-size-4-5: 1.12em !default; // Ubuntu Mono is a bit small
 
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans+KR|Ubuntu+Mono);
 
-https://github.com/mmistakes/minimal-mistakes/issues/1219
+//https://github.com/mmistakes/minimal-mistakes/issues/1219
 html {
   font-size: 12px; // change to whatever
   
