--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -71,9 +71,19 @@ layout: default
 
   <!-- 무슨 부분인지 아직 모르겠음. 21/03/28 이제 알았음 post 맨 아래에 최근 게시물을 표현해주는 부분 -->
   {% comment %}<!-- only show related on a post page when `related: true` -->{% endcomment %}
- 
+  {% if page.id and page.related and site.related_posts.size > 0 %}
     <div class="page__related">
-      <h4 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You May Also Enjoy" }}</h4>
+      <h4 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You upupupupupup" }}</h4>
+      <div class="grid__wrapper">
+        {% for post in site.related_posts limit:4 %}
+          {% include archive-single.html type="grid" %}
+        {% endfor %}
+      </div>
+    </div>
+  {% comment %}<!-- otherwise show recent posts if no related when `related: true` -->{% endcomment %}
+  {% elsif page.id and page.related %}
+    <div class="page__related">
+      <h4 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You downdowndown" }}</h4>
       <div class="grid__wrapper">
         {% for post in site.posts limit:4 %}
           {% if post.id == page.id %}
@@ -83,4 +93,5 @@ layout: default
         {% endfor %}
       </div>
     </div>
+  {% endif %}
 </div>
