--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -76,7 +76,7 @@ layout: default
       <h4 class="page__related-title">{{  "You upupupupupup" }}</h4>
       <div class="grid__wrapper">
         {% for post in site.related_posts limit:4 %}
-          {% include archive-single.html type="list" %}
+          {% include archive-single.html type="wide" %}
         {% endfor %}
       </div>
     </div>
