--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -508,20 +508,20 @@ body {
    ========================================================================== */
 
 .page__related {
-  @include clearfix();
-  float: left;
-  margin-top: 2em;
-  padding-top: 1em;
-  border-top: 1px solid $border-color;
+  // @include clearfix();
+  // float: left;
+  // margin-top: 2em;
+  // padding-top: 1em;
+  // border-top: 1px solid $border-color;
 
-  @include breakpoint($large) {
-    float: right;
-    width: calc(100% - #{$right-sidebar-width-narrow});
-  }
+  // @include breakpoint($large) {
+  //   float: right;
+  //   width: calc(100% - #{$right-sidebar-width-narrow});
+  // }
 
-  @include breakpoint($x-large) {
-    width: calc(100% - #{$right-sidebar-width});
-  }
+  // @include breakpoint($x-large) {
+  //   width: calc(100% - #{$right-sidebar-width});
+  // }
 
   a {
     color: inherit;
@@ -531,8 +531,8 @@ body {
 
 .page__related-title {
   margin-bottom: 10px;
-  font-size: $type-size-6;
-  text-transform: uppercase;
+  //font-size: $type-size-6;
+  //text-transform: uppercase;
 }
 
 /*
