--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -430,7 +430,9 @@
         padding-bottom: 0.125em;
       }
 
-      
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
