--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -48,10 +48,10 @@ layout: archive
             <h2 class="archive__subtitle">{{ category[0] }}</h2>
             <div class="entries-{{ entries_layout }}">
               {% for post in category.last %}
-                {% include archive-single.html  %}
+                <!-- {% include archive-single.html  %} -->
               {% endfor %}
             </div>
-            <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
+            <!-- <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a> 맨 위로 버튼-->
           </section>
         {% endif %}
       {% endif %}
