--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,9 @@ classes: wide
       </footer>
     </div>
 
-    <aside class="sidebar__top">
+    <!-- <aside class="sidebar__top">
       <a href="#site-nav"> <i class="fas fa-angle-double-up fa-2x"></i></a>
-    </aside>
+    </aside> -->
 
     {% include scripts.html %}
 
