--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -26,10 +26,10 @@
           </svg>
         </button>
         {% endif %}
-        <!-- <button class="greedy-nav__toggle hidden" type="button">
+        <button class="greedy-nav__toggle hidden" type="button">
           <span class="visually-hidden">{{ site.data.ui-text[site.locale].menu_label | default: "Toggle menu" }}</span>
           <div class="navicon"></div>
-        </button> -->
+        </button>
         <ul class="hidden-links hidden"></ul>
       </nav>
     </div>
