--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@ classes: wide
     </div>
 
     <aside class="sidebar__top">
-      <a href="#site-nav"> <i class="fa fa-arrow-up fa-2x"></i></a>
+      <a href="#site-nav"> <i class="fa fa-chevron-circle-up fa-2x"></i></a>
     </aside>
 
     {% include scripts.html %}
