--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,16 @@ classes: wide
       </footer>
     </div>
 
-    <aside class="sidebar__top">
+    <!-- <aside class="sidebar__top">
       <a href="#site-nav"> <i class="fa fa-chevron-circle-up fa-4x"></i></a>
-    </aside>
+    </aside> -->
+    <script src="https://unpkg.com/vanilla-back-to-top@7.2.1/dist/vanilla-back-to-top.min.js"></script>
+    <script>addBackToTop({
+      diameter: 56,
+      backgroundColor: 'rgb(255, 82, 82)',
+      textColor: '#fff'
+    })</script>
+
 
     {% include scripts.html %}
 
