--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,11 +41,7 @@ classes: wide
       <a href="#site-nav"> <i class="fa fa-chevron-circle-up fa-4x"></i></a>
     </aside> -->
     <script src="https://unpkg.com/vanilla-back-to-top@7.2.1/dist/vanilla-back-to-top.min.js"></script>
-    <script>addBackToTop({
-      diameter: 56,
-      backgroundColor: 'rgb(255, 82, 82)',
-      textColor: '#fff'
-    })</script>
+    <script>addBackToTop()</script>
 
 
     {% include scripts.html %}
